<resources>
    <string name="app_name">DUNKIN\' DONUTS</string>
    <string name="userName_hint">Имя пользователя</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_in_button">ВОЙТИ</string>
    <string name="textWelcome">Добро пожаловать!</string>
    <string name="description_dunki_donuts">DUNKI\' DONUTS</string>
    <string name="greetings">Привет, %s! Что желаете?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additives">Что добавить в ваш %s?</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лемон</string>
    <string name="choose_drink_type">Выберите тип напитка</string>
    <string name="make_order">СДЕЛАТЬ ЗАКАЗ</string>
    <string name="name">Имя:</string>
    <string name="drink">Напиток:</string>
    <string name="drink_type">Тип напитка:</string>
    <string name="additives_label">Добавки:</string>
    <string name="error_fields_emty">Пожалуйста заполните все поля!</string>

    <array name="types_of_tea">
        <item>Зеленый</item>
        <item>Черный</item>
    </array>
    <array name="types_of_coffee">
        <item>Americano</item>
        <item>Espresso</item>
        <item>Latte</item>
    </array>

</resources>